refactor: применить text blocks и SequencedCollections (Java 21)
- HelpInfoService: заменён unicode-литерал с \n на text block
- SandboxTradingService: margin(), stats(), myRank() — строки + конкатенация заменены на text block + formatted(); .get(0) → .getFirst()
- CurrencyInfoService: .get(0) → .getFirst()
- SandboxReportScheduler: .get(0) → .getFirst()

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>